hard-gists/d91a0983140acbb8bc6455f58cbf45cb/run.log
=== Docker Run Log for d91a0983140acbb8bc6455f58cbf45cb ===
Started at: Mi 29. Okt 20:28:29 CET 2025

[2025-10-29 20:28:29] START: Running container for d91a0983140acbb8bc6455f58cbf45cb
[2025-10-29 20:28:30] SUCCESS: Container ff0c5180cb0c9f7e0bbe620165d4a8eb7583462910bd9b9d8323fad9fd987247 started for d91a0983140acbb8bc6455f58cbf45cb
=== Container logs for d91a0983140acbb8bc6455f58cbf45cb ===
  File "/snippet.py", line 41
    print h5_batch_data.shape
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for d91a0983140acbb8bc6455f58cbf45cb ===
[2025-10-29 20:28:32] INFO: Container ff0c5180cb0c9f7e0bbe620165d4a8eb7583462910bd9b9d8323fad9fd987247 has stopped
